--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jhoffmann.flutter_fcm">
    <application
+        android:name=".Application"
         android:label="flutter_fcm"
         android:icon="@mipmap/ic_launcher">
         <activity
