--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   firebase_messaging: ^10.0.2
   flutter_local_notifications: ^6.0.0
   firebase_auth: ^1.4.1
+  cached_network_image: ^3.0.0
+  firebase_storage: ^8.1.3
+  generic_bloc_provider: ^2.0.0-nullsafety.1
+  google_sign_in: ^5.0.4
+  gradient_input_border: ^1.0.0
+  image_picker: ^0.8.0+3
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +53,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/
+    - assets/img/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -59,6 +68,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
+        - asset: fonts/Lato-Italic.ttf
+        - asset: fonts/Lato-Black.ttf
+        - asset: fonts/Lato-BlackItalic.ttf
+        - asset: fonts/Lato-BoldItalic.ttf
+        - asset: fonts/Lato-Bold.ttf
+        - asset: fonts/Lato-LightItalic.ttf
+        - asset: fonts/Lato-Light.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
