commit on '3.-Notificaciones'

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,4 @@
 {
-  "functions": {
-    "source": "functions"
-  },
   "emulators": {
     "functions": {
       "port": 5001
@@ -12,5 +9,9 @@
     "ui": {
       "enabled": true
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
